--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [build-system]
-requires = ["setuptools>=61"]
+requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "base-qt"
 version = "0.1.0"
-description = "Qt base library"
-readme = "README.md"
+description = "Qt adapters and reusable UI helpers for base_core."
 requires-python = ">=3.11"
-authors = [
-  { name = "Your Name" }
-]
 dependencies = [
+  "PySide6>=6.6",
+  "base_core",   
 ]
 
 [tool.setuptools]
-packages = ["base_qt"]
+package-dir = {"" = "base_qt"}
