--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -13,4 +13,4 @@ dependencies = [
 ]
 
 [tool.setuptools]
-package-dir = {"" = "base_qt"}
+packages = ["base_qt"]
